Change logging dependency from logback to slf4j util logging

--- a/backend/oma/.mvn/pom.xml
+++ b/backend/oma/.mvn/pom.xml
@@ -11,7 +11,6 @@
     <properties>
         <jdk.version>11</jdk.version>
         <maven.compiler.plugin>3.8.1</maven.compiler.plugin>
-        <logback.classic.version>1.2.3</logback.classic.version>
     </properties>
 
     <dependencies>
@@ -50,9 +49,9 @@
             <version>1.1.0.Final</version>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.classic.version}</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.28</version>
         </dependency>
     </dependencies>
 
