add properties for Java Mail test inbox

--- a/backend/oma/src/main/resources/application.properties
+++ b/backend/oma/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+# Java Mail
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=407c35ca05c4fa
+spring.mail.password=2b43b0672cedc6
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
