--- a/backend/oma/src/main/resources/application.properties
+++ b/backend/oma/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#Data source and hibernate
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/oma
 spring.datasource.username=root
