Add email engine and some greeting template

--- a/backend/oma/src/main/resources/application.properties
+++ b/backend/oma/src/main/resources/application.properties
@@ -8,8 +8,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # Java Mail
 spring.mail.host=smtp.mailtrap.io
-spring.mail.port=587
-spring.mail.username=407c35ca05c4fa
-spring.mail.password=2b43b0672cedc6
+spring.mail.port=2525
+spring.mail.username=4967836dfb1d7d
+spring.mail.password=4ca4973daba449
+spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Encoding
+server.servlet.encoding.charset=UTF-8
+spring.mail.default-encoding=UTF-8
+spring.thymeleaf.encoding=UTF-8
