--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,7 +9,14 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    services:
+      mysql: 
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: password
+        ports: 
+          - 3306:3306
+      
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
