--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,12 +9,23 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    services:
+      mysql: 
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: password
+        ports: 
+          - 3306:3306
+      
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    - name: Verify MySQL connection from host
+      run: |
+        sudo apt-get install -y mysql-client
+        mysql --host 127.0.0.1 --port 3306 -uroot -ppassword -e "create database if not exists oma"
     - name: Build with Maven
       run: mvn -B package --file backend/oma/pom.xml
