Begin work in CompanyDAO CompanyDAOImplementation and service

--- a/backend/oma/src/main/resources/application.properties
+++ b/backend/oma/src/main/resources/application.properties
@@ -4,7 +4,8 @@ logback.FILE_NAME=Application.log
 #Data source and hibernate
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/oma
+spring.datasource.url=jdbc:mysql://localhost:3306/oma-develop?useUnicode=true&useJDBCCompilantTimezoneShift\
+  =true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
