--- a/backend/oma/.mvn/pom.xml
+++ b/backend/oma/.mvn/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.classic.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.9.6</version>
+        </dependency>
     </dependencies>
 
     <build>
