--- a/backend/oma/.mvn/pom.xml
+++ b/backend/oma/.mvn/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.9.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.6</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
