--- a/backend/oma/src/main/resources/application.properties
+++ b/backend/oma/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logback.FILE_NAME=Application.log
 #Data source and hibernate
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/oma-develop?useUnicode=true&useJDBCCompilantTimezoneShift\
+spring.datasource.url=jdbc:mysql://localhost:3306/oma?useUnicode=true&useJDBCCompilantTimezoneShift\
   =true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
