--- a/backend/oma/.mvn/pom.xml
+++ b/backend/oma/.mvn/pom.xml
@@ -65,6 +65,16 @@
             <version>1.9.6</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.4</version>
+        </dependency>
     </dependencies>
 
     <build>
