--- a/backend/oma/src/main/resources/application.properties
+++ b/backend/oma/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 server.servlet.encoding.charset=UTF-8
 spring.mail.default-encoding=UTF-8
 spring.thymeleaf.encoding=UTF-8
+
+#Swagger
+springdoc.api-docs.path=/api-docs
