--- a/backend/oma/src/main/resources/application.properties
+++ b/backend/oma/src/main/resources/application.properties
@@ -26,5 +26,5 @@ spring.mail.default-encoding=UTF-8
 spring.thymeleaf.encoding=UTF-8
 
 #Actuator
-management.endpoints.web.base-path=/status
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.base-path=/status
+#management.endpoints.web.exposure.include=*
