--- a/backend/oma/pom.xml
+++ b/backend/oma/pom.xml
@@ -110,7 +110,11 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
