Update app properties

--- a/backend/oma/src/main/resources/application.properties
+++ b/backend/oma/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 server.servlet.encoding.charset=UTF-8
 spring.mail.default-encoding=UTF-8
 spring.thymeleaf.encoding=UTF-8
+
+# App Properties
+loizenai.app.jwtSecret=oma.comSecretKey
+loizenai.app.jwtExpiration=86400
