Update properties of upload files

--- a/backend/oma/src/main/resources/application.properties
+++ b/backend/oma/src/main/resources/application.properties
@@ -34,3 +34,16 @@ jwt.secret=omaJWTsecret
 
 #Swagger
 springdoc.api-docs.path=/api-docs
+
+#Upload cmv files
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=10KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=/home/yogesh/media/upload
+
