--- a/backend/oma/pom.xml
+++ b/backend/oma/pom.xml
@@ -122,7 +122,12 @@
 			<artifactId>opencsv</artifactId>
 			<version>5.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.3.4.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
